# speedevo

./: .gitignore  LICENSE  README.md  setup.cfg
src/speedevo/: speedevo.py
