[metadata]
name = speedevo
version = 0.0.5
author = Gerson Jr
author_email = gersonjunior100@gmail.com
description = Pacote utilizado para realizar teste na velocidade de internet e salvando os dados em um .xlxs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gersonjr2/speedevo
project_urls =
    Bug Tracker = https://github.com/gersonjr2/speedevo
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    
[options]
packages = find:
python_requires = >=3.8
include_package_data = True
package_dir =
    = src
install_requires =
    pandas>=1.3.0
    matplotlib>=3.4.2
    openpyxl>=3.0.7
    speedtest-cli>=2.1.3

[options.packages.find]
where = src
